# market-brief-agents

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
agentic/: __init__.py  graph.py  rag.py  state.py
backend/: __init__.py  cli.py  dashboard.py
docs/: AI_ENGINEERING_ROADMAP.md  ARCHITECTURE.md  PROJECT_STRUCTURE.md  PUBLICATION_CHECKLIST.md
frontend/: package-lock.json  package.json  tsconfig.json
jobs/: __init__.py  autopilot.py  daily_refresh.py  pipeline.py
media_engine/: __init__.py  assets.py  captions.py  chart_animation.py  paths.py  prep.py  probe.py  production.py  quality.py  remotion.py  renderer.py  scene_assets.py  scene_builder.py  script_manifest.py  script_schema.py  story_builder.py  story_schema.py
models/: __init__.py  database.py
remotion/: package-lock.json  package.json  tsconfig.json
scripts/: assert_public_clean.py  com.marketbrief.weekday-autopilot.plist.template  install_weekday_autopilot_launchd.sh
services/: __init__.py  artifact_cleanup.py  asset_generator.py  audio_generator.py  company_universe.py  config.py  demo_data.py  earnings.py  event_detector.py  gemini.py  generated_cleanup.py  logging_utils.py  market_calendar.py  market_data.py  research_digest.py  script_generator.py  sec_filings.py  story_analyzer.py  video_renderer.py  voice_profile.py  web_research.py
tests/: test_agentic.py  test_artifact_cleanup.py  test_asset_generator.py  test_audio_generator.py  test_autopilot.py  test_cli.py  test_collectors.py  test_daily_refresh.py  test_database.py  test_event_detector.py  test_gemini.py  (+11 more)
(+32 files in other folders)
